--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -92,7 +92,7 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
         <a class="popup-link" id="popup-wiki-link" href="#" target="_blank" title="Go to Wiki (external link)"><i class="fa fa-brands fa-wikipedia-w"></i></a>
         <a class="popup-link" id="popup-map-link" href="#" target="_blank" title="Copy map link to clipboard"><i class="fa fa-link"></i></a>
         <a class="popup-link" id="popup-form-id-link" href="#" target="_blank" title="Copy form id to clipboard"><i class="fa fa-hashtag"></i></a>
-        <a class="popup-link" id="popup-marker-id-link" href="#" target="_blank" title="Copy location id to clipboard"><i class="fa fa-location-crosshairs"></i></a>
+        <a class="popup-link" id="popup-marker-id-link" href="#" target="_blank" title="Copy location id to clipboard (for player.moveto)"><i class="fa fa-location-crosshairs"></i></a>
       </div>
     </div>
   </div>
