--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -776,6 +776,7 @@ function loadData() {
 
       c0.classList.add('fa');
       c0.classList.add('fa-' + t.fa);
+      // c0.style.color = t.bg; // color icons
 
       let c1 = document.createElement('span');
       c1.innerHTML = t.type;
