--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -692,6 +692,8 @@ function loadData() {
   for (o of markers.markers) {
     //console.log(o);
 
+    if (!o.type) continue;
+
     let t = getType(o);
     weights[t.group] = Math.max(weights[t.group]||0, t.weight);
 
